# vscode-bazel-extension

./: .gitignore  CONTRIBUTING.md  DEBUGGING.md  README.md  diagnose.sh  package-lock.json  package.json
design/: vscode-bazel-extension-build-parser.md  vscode-bazel-extension-design.md  vscode-bazel-extension-implementation-guide.md  vscode-bazel-extension-quick-reference.md  vscode-bazel-extension-rust-advantages.md  vscode-bazel-extension-rust-design.md
extension/: .eslintrc.json  .vscodeignore  LICENSE  README.md  language-configuration.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/src/commands/: index.ts
extension/src/providers/: targetProvider.ts
extension/syntaxes/: bazel.tmLanguage.json
lsp/: .gitignore  Cargo.toml  README.md  build.rs
lsp/src/: main.rs  server.rs
lsp/src/bazel/: bep.rs  build.pest  build_graph.rs  client.rs  mod.rs  query.rs
lsp/src/cache/: mod.rs
lsp/src/languages/: base_proxy.rs  coordinator.rs  go.rs  java.rs  mod.rs  python.rs  typescript.rs
lsp/src/proto/: build.proto
lsp/tests/: integration_test.rs
scripts/: build.sh  connect_gke.sh  package.sh
test/: example.BUILD
